Fix; Fallo en el contraste del hero

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -4,7 +4,7 @@ $text: #2D3436;
 $gold: #FFB800;
 $orange: #FF7A00;
 $highlight: #FFB800;
-$subheading: #636e72;
+$subheading: #2D3436;
 $white: #FFFFFF;
 $charcoal: #2D3436;
 $purple: #FFB800; // Updated to gold to avoid purple accents
