--- a/src/styles/components/content/h1.module.scss
+++ b/src/styles/components/content/h1.module.scss
@@ -1,4 +1,5 @@
 .root {
+    color: #2D3436;
     font-size: clamp(2.4rem, 1.2vw + 1.98rem, 2.9rem);
     margin: 0;
     line-height: 1.05;
