--- a/src/styles/home/hero/cards.module.scss
+++ b/src/styles/home/hero/cards.module.scss
@@ -23,14 +23,21 @@
         height: 100%;
         padding: 2.5rem;
         transition: all 0.5s;
+        z-index: 1;
 
-        &:hover {
+        &:hover, &.activeCard {
             .cardActive {
                 opacity: 1;
             }
 
             .cardContent {
                 transform: translateZ(30px);
+                p, strong {
+                    color: #FFFFFF !important;
+                }
+                svg {
+                    fill: #FFFFFF !important;
+                }
             }
         }
 
@@ -48,15 +55,7 @@
                 background: linear-gradient(315deg, #FFB800 0%, #FF7A00 100%);
                 box-shadow: rgba(255, 184, 0, 0.2) 0px 20px 40px 0px, rgba(255, 255, 255, 0.5) -2px 2px 2px 0px inset;
                 opacity: 0;
-                
-                ~ .cardContent {
-                    p, strong {
-                        color: #FFFFFF !important;
-                    }
-                    svg {
-                        fill: #FFFFFF !important;
-                    }
-                }
+                z-index: 1;
             }
 
             &.cardInactive {
@@ -64,6 +63,7 @@
                 box-shadow: rgba(0, 0, 0, 0.05) 0px 20px 40px 0px, rgba(0, 0, 0, 0.05) 0px 1px 2px 0px inset;
                 border: 1px solid rgba(0, 0, 0, 0.05);
                 opacity: 1;
+                z-index: 0;
             }
         }
 
@@ -74,6 +74,7 @@
             position: relative;
             pointer-events: none;
             transition: transform 0.2s;
+            z-index: 2;
         }
     }
 }
